code25_all/scala/16581937.txt
+
felix@felix-UX32VD:~$ scala
Welcome to Scala version 2.9.2 (OpenJDK 64-Bit Server VM, Java 1.7.0_21).
Type in expressions to have them evaluated.
Type :help for more information.

scala> var + = 42
+: Int = 42

scala> +
     | 
     | 
You typed two blank lines.  Starting a new command.

scala> List(+,+,+)
<console>:1: error: illegal start of simple expression
       List(+,+,+)
             ^

scala> (+)
<console>:1: error: illegal start of simple expression
       (+)
         ^

scala> 

